vlib/v/checker/tests/or_err.out
vlib/v/checker/tests/or_err.vv:6:2: error: last statement in the `or {}` block should be an expression of type `&int` or exit parent scope
    4 | 
    5 | a := f() or {
    6 |     {
      |     ^
    7 |     }
    8 | }
vlib/v/checker/tests/or_err.vv:10:14: error: wrong return type `rune` in the `or {}` block, expected `&int`
    8 | }
    9 | _ = f() or { a }
   10 | _ = f() or { `.` }
      |              ~~~
