vlib/v/checker/tests/or_err.vv
fn f() ?&int {
	return none
}

a := f() or {
	{
	}
}
_ = f() or { a }
_ = f() or { `.` }
